WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292618
Video element with WebM Object URLs causes MediaError code 2
https://bugs.webkit.org/show_bug.cgi?id=292618
Summary
Video element with WebM Object URLs causes MediaError code 2
David Parker
Reported
2025-05-06 10:10:44 PDT
Created
attachment 475150
[details]
Screen recording of bug Overview: A video element with `src` set to a WebM object URL causes an error event and a `MediaError` code 2 to be "thrown". This has become more impactful now that `MediaRecorder` supports recording in WebM. In my specific situation, `video.js` ends up erroring out when playing back user recorded videos because of this. Steps to reproduce: 1. Go to
https://dparker2.github.io/webkit-webm-bug/
(source code at
https://github.com/dparker2/webkit-webm-bug/blob/main/index.html
) 2. Wait for the video element to appear 3. Press play, on iOS an alert will show saying `ERROR CODE 2: Media failed to load` Expected behavior: No error should happen. The object URL is valid and this site does not throw this error on any other browser. My hardware: iPhone 14 Pro, iOS 18.4.1
Attachments
Screen recording of bug
(840.95 KB, video/mp4)
2025-05-06 10:10 PDT
,
David Parker
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-13 10:11:21 PDT
<
rdar://problem/151234095
>
Jean-Yves Avenard [:jya]
Comment 2
2025-06-03 22:20:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46305
EWS
Comment 3
2025-06-04 02:54:46 PDT
Committed
295802@main
(af89b915c855): <
https://commits.webkit.org/295802@main
> Reviewed commits have been landed. Closing PR #46305 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug