Video element with WebM Object URLs causes MediaError code 2 https://bugs.webkit.org/show_bug.cgi?id=292618 rdar://151234095

Reviewed by Youenn Fablet.

Don't throw an error if all content was loaded immediately as would happen
with a blob or data URL.

Additionally, don't cancel load if all data has already been received.

Test added.

* LayoutTests/media/media-vp8-webm-with-blob-expected.txt: Added.
* LayoutTests/media/media-vp8-webm-with-blob.html: Added.

Canonical link: https://commits.webkit.org/295802@main